plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.nellshark'
version = '1.0.0'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'

    runtimeOnly 'org.postgresql:postgresql:42.7.2'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.apache.commons:commons-lang3:3.14.0'

    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    testImplementation "org.testcontainers:postgresql:1.19.5"
    testImplementation 'org.testcontainers:junit-jupiter:1.19.5'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('bootRunDev') {
    group 'application'
    description 'Runs the Spring Boot application with the dev profile'
    doFirst {
        tasks.bootRun.configure {
            systemProperty 'spring.profiles.active', 'dev'
        }
    }
    finalizedBy tasks.bootRun
}
